--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Odin Library</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div>The Odin Library</div>
+            <div></div>
+        </div>
+        <div class="table"></div>
+    </div>
     <script src="myscripts.js"></script>
 </body>
 </html>
