added content for header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div>The Odin Library</div>
-            <div></div>
+            <button>Log in</button>
         </div>
         <div class="table"></div>
     </div>
