added a button for adding books

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <div>The Odin Library</div>
             <button>Log in</button>
         </div>
+        <div class="add-book"><button>+ Add book</button></div>
         <div class="table"></div>
+        <div class="footer">Page layout inspired by michalosman</div>
     </div>
     <script src="myscripts.js"></script>
 </body>
