added book card styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
             <button>Log in</button>
         </div>
         <div class="add-book"><button>+ Add book</button></div>
-        <div class="table"></div>
+        <div class="table">
+            <div class="card">
+                <div class="card-content">
+                    <div>"Harry Potter"</div>
+                    <div>J.K Rowling</div>
+                    <div>581 Pages</div>
+                    <div>Not read</div>
+                    <div>Remove</div>
+                </div>
+            </div>
+        </div>
         <div class="footer">Page layout inspired by michalosman</div>
     </div>
     <script src="myscripts.js"></script>
