completed styling for book cards

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                     <div>Remove</div>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-content">
+                    <div>"Harry Potter"</div>
+                    <div>J.K Rowling</div>
+                    <div>581 Pages</div>
+                    <div>Not read</div>
+                    <div>Remove</div>
+                </div>
+            </div>
         </div>
         <div class="footer">Page layout inspired by michalosman</div>
     </div>
