--- a/index.html
+++ b/index.html
@@ -19,17 +19,8 @@
                     <div>"Harry Potter"</div>
                     <div>J.K Rowling</div>
                     <div>581 Pages</div>
-                    <div>Not read</div>
-                    <div>Remove</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-content">
-                    <div>"Harry Potter"</div>
-                    <div>J.K Rowling</div>
-                    <div>581 Pages</div>
-                    <div>Not read</div>
-                    <div>Remove</div>
+                    <div class="read">Not read</div>
+                    <div class="remove">Remove</div>
                 </div>
             </div>
         </div>
