added hover effects for book card buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div>The Odin Library</div>
-            <button>Log in</button>
+            <button class="log-in">Log in</button>
         </div>
         <div class="add-book"><button>+ Add book</button></div>
         <div class="table">
