added boilerplate js code for new book card

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="table">
             <div class="card">
                 <div class="card-content">
-                    <div>"Harry Potter"</div>
-                    <div>J.K Rowling</div>
-                    <div>581 Pages</div>
+                    <div class="title">"Harry Potter"</div>
+                    <div class="author">J.K Rowling</div>
+                    <div class="pages">581 Pages</div>
                     <div class="read">Not read</div>
                     <div class="remove">Remove</div>
                 </div>
