added switching "book read" javascript and styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="title">"Harry Potter"</div>
                     <div class="author">J.K Rowling</div>
                     <div class="pages">581 Pages</div>
-                    <div class="read">Not read</div>
+                    <div class="not-read">Not read</div>
                     <div class="remove">Remove</div>
                 </div>
             </div>
