changed raw harry potter code to js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="add-book"><button>+ Add book</button></div>
         <div class="table">
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-content">
                     <div class="title">"Harry Potter"</div>
                     <div class="author">J.K Rowling</div>
@@ -22,7 +22,7 @@
                     <div class="not-read">Not read</div>
                     <div class="remove">Remove</div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="footer">Page layout inspired by michalosman</div>
     </div>
