changed formatting for html and css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Odin Library</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <div>The Odin Library</div>
-            <button class="log-in">Log in</button>
-        </div>
-        <div class="add-book"><button>+ Add book</button></div>
-        <div class="table">
-            <!-- <div class="card">
+      <div class="header">
+        <div>The Odin Library</div>
+        <button class="log-in">Log in</button>
+      </div>
+      <div class="add-book"><button>+ Add book</button></div>
+      <div class="table">
+        <!-- <div class="card">
                 <div class="card-content">
                     <div class="title">"Harry Potter"</div>
                     <div class="author">J.K Rowling</div>
@@ -23,9 +23,9 @@
                     <div class="remove">Remove</div>
                 </div>
             </div> -->
-        </div>
-        <div class="footer">Page layout inspired by michalosman</div>
+      </div>
+      <div class="footer">Page layout inspired by michalosman</div>
     </div>
     <script src="myscripts.js"></script>
-</body>
+  </body>
 </html>
