--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div>The Odin Library</div>
         <button class="log-in">Log in</button>
       </div>
-      <div class="add-book"><button>+ Add book</button></div>
+      <div class="add-book-button">
+        <button id="showDialog">+ Add book</button>
+      </div>
       <div class="table">
         <!-- <div class="card">
                 <div class="card-content">
@@ -26,6 +28,31 @@
       </div>
       <div class="footer">Page layout inspired by michalosman</div>
     </div>
+    <dialog id="add-book-dialog">
+      <form>
+        <div>
+          <label for="title">Title</label>
+          <input type="text" id="title" name="title" required>
+        </div>
+        <div>
+          <label for="author">Author</label>
+          <input type="text" id="author" name="author" required>
+        </div>
+        <div>
+          <label for="pages">Pages</label>
+          <input type="number" id="pages" name="pages" required>
+        </div>
+        <div>
+          <label>Read?</label>
+          <input type="checkbox" name="read-check" id="read-check" required>
+        </div>
+        <div>
+          <button value="cancel" formmethod="dialog">Cancel</button>
+          <button id="confirmBtn" value="default">Confirm</button>
+        </div>
+      </form>
+    </dialog>
+    <output></output>
     <script src="myscripts.js"></script>
   </body>
 </html>
