--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
     </div>
     <dialog id="add-book-dialog">
       <form>
-        <div>
+        <div class="title-input">
           <label for="title">Title</label>
           <input type="text" id="title" name="title" required>
         </div>
-        <div>
+        <div class="author-input">
           <label for="author">Author</label>
           <input type="text" id="author" name="author" required>
         </div>
-        <div>
+        <div class="pages-input">
           <label for="pages">Pages</label>
           <input type="number" id="pages" name="pages" required>
         </div>
-        <div>
+        <div class="read-input">
           <label>Read?</label>
           <input type="checkbox" name="read-check" id="read-check" required>
         </div>
-        <div>
+        <div class="submission-buttons">
           <button value="cancel" formmethod="dialog">Cancel</button>
           <button id="confirmBtn" value="default">Confirm</button>
         </div>
