--- a/index.html
+++ b/index.html
@@ -26,33 +26,33 @@
                 </div>
             </div> -->
       </div>
+      <dialog id="add-book-dialog">
+        <form id="add-book-form">
+          <div class="title-input">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" required>
+          </div>
+          <div class="author-input">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author" required>
+          </div>
+          <div class="pages-input">
+            <label for="pages">Pages</label>
+            <input type="number" id="pages" name="pages" required>
+          </div>
+          <div class="read-input">
+            <label for="read-check">Read?</label>
+            <input type="checkbox" name="read-check" id="read-check">
+          </div>
+          <div class="submission-buttons">
+            <button id="cancelBtn">Cancel</button>
+            <button id="confirmBtn" formmethod="dialog"">Confirm</button>
+          </div>
+        </form>
+      </dialog>
+      <output></output>
       <div class="footer">Page layout inspired by michalosman</div>
     </div>
-    <dialog id="add-book-dialog">
-      <form>
-        <div class="title-input">
-          <label for="title">Title</label>
-          <input type="text" id="title" name="title" required>
-        </div>
-        <div class="author-input">
-          <label for="author">Author</label>
-          <input type="text" id="author" name="author" required>
-        </div>
-        <div class="pages-input">
-          <label for="pages">Pages</label>
-          <input type="number" id="pages" name="pages" required>
-        </div>
-        <div class="read-input">
-          <label>Read?</label>
-          <input type="checkbox" name="read-check" id="read-check" required>
-        </div>
-        <div class="submission-buttons">
-          <button value="cancel" formmethod="dialog">Cancel</button>
-          <button id="confirmBtn" value="default">Confirm</button>
-        </div>
-      </form>
-    </dialog>
-    <output></output>
     <script src="myscripts.js"></script>
   </body>
 </html>
