styled dialog and edited book card formatting

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
       <dialog id="add-book-dialog">
         <form id="add-book-form">
+          <div class="form-title"><u>Add a new book</u></div>
           <div class="title-input">
             <label for="title">Title</label>
             <input type="text" id="title" name="title" required>
