updated footer message

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </form>
       </dialog>
-      <div class="footer">Page layout inspired by michalosman</div>
+      <div class="footer">Page layout inspired by michalosman, created by Oliver Yeo</div>
     </div>
     <script src="myscripts.js"></script>
   </body>
