Refactor library into a class

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       </dialog>
       <div class="footer">Page layout inspired by michalosman, created by Oliver Yeo</div>
     </div>
-    <script src="myscripts.js"></script>
+    <script src="refactoredscript.js"></script>
   </body>
 </html>
